<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.design.widget.TabLayout
        android:id="@+id/step_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="scrollable"
        app:tabGravity="fill"/>

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/step_fragment_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/step_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>




