...
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/step_description"
                    />
            </ScrollView>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <TextView
...
