<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recipe_recycler"
        >

    </android.support.v7.widget.RecyclerView>


    <ProgressBar
        android:id="@+id/recipe_progress_bar"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_gravity="center"
        android:visibility="invisible"
        />


    <TextView
        android:id="@+id/recipe_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/recipe_error_message_padding"
        android:text="@string/recipe_error_message"
        android:textSize="20sp"
        android:visibility="invisible"
        android:layout_gravity="center"
        />
</FrameLayout>
