...
                android:text="@string/ingredients"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                />

            <!-- Ingredients list -->
            <TextView
                android:id="@+id/ingredientsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/ingredients_card_padding"
                android:paddingEnd="@dimen/ingredients_card_padding"
                android:layout_marginTop="@dimen/ingredients_card_margin"
                android:textSize="16sp"
...
